	+ Visual Studio 2008 express solution (fortran conversion with f2c) support
 - Dynamic libraries	
 - Atlas 3.8 support (Core 2 Duo and more support)
 - Intel Math Kernel Library support
 - Better support on Windows Vista


Dynamic/incremental link:
=========================
 - Module renamed to dynamic link
 - Visual Studio 2008 support
 - Under Linux/Unix, now based on basic autotools for the detection of compiler
	and compilation.
 - New functions:
  + getdynlibext - get the extension of dynamic libraries on your operating system.
 - Function improved:
  + ilib_for_link - now accept the actual filename (not only filename.o but also filename.c or filename.f)


TCL/TK:
=======
 - New event loop 
	+ @TODO detail
 - Provided with version 8.5 of TCL/TK
 - Removed Functions:
	+ tcl_?
	+ demoplay is obsolete
	+ sciGUIhelp is obsolete 


Java/Scilab API:
================
 - Refactoring of the Java API


Tests:
======
 - Tests are now embedded into Scilab (binary and sources)
 - Many tests added 
	+ Unitary
	+ Non regression
	+ Benchmarks
 - New functions:
    + test_run
    + unitary_test_run
    + nonreg_test_run


Internal API:
=============
 - Used in functions GetRhsVar, PutLhsVar... The datatype naming have been 
	changed to:
	+ "c" => STRING_DATATYPE
	+ "S" => MATRIX_OF_STRING_DATATYPE
	+ "d" => MATRIX_OF_DOUBLE_DATATYPE
	+ "r" => MATRIX_OF_RATIONAL_DATATYPE
	+ "I" => MATRIX_OF_VARIABLE_SIZE_INTEGER_DATATYPE
	+ "i" => MATRIX_OF_INTEGER_DATATYPE
	+ "b" => MATRIX_OF_BOOLEAN_DATATYPE
	+ "z" => MATRIX_OF_COMPLEX_DATATYPE
	+ "s" => SPARSE_MATRIX_DATATYPE
	+ "l" => LIST_DATATYPE
	+ "t" => TYPED_LIST_DATATYPE
	+ "m" => MATRIX_ORIENTED_TYPED_LIST_DATATYPE
	+ "p" => SCILAB_POINTER_DATATYPE
	+ "h" => GRAPHICAL_HANDLE_DATATYPE
	+ "f" => EXTERNAL_DATATYPE
	These declarations are in modules/core/includes/stackTypeVariable.h
 - define TRUE_ and FALSE_ removed for TRUE and FALSE
 - Many other things... Have a look to the sources...


Scicos:
=======