@@ -27,8 +27,8 @@ ilib_build('bug',['ex2c_1','intex2c'],files,[]);
    Generate a loader file
    Generate a Makefile: Makelib
    Running the makefile
-   compilation of bug_2085
-   building shared library (be patient)
+   Compilation of bug_2085
+   Building shared library (be patient)
 // disable message
 warning_mode = warning('query');
 warning('off');
