@@ -1,0 +1,52 @@
+//create fortran code a copy of the lapack dgesv routine
+curdir=pwd();
+mputl(['      subroutine dgesvtst( n,nrhs,a,lda,ipiv,b,ldb,info )'
+       '      integer            info,lda,ldb,n,nrhs,ipiv( * )'
+       '      double precision   a(lda,*),b(ldb,*)'
+       '      external           dgetrf,dgetrs'
+       '      info = 0'
+       '      call dgetrf(n,n,a,lda,ipiv,info)'
+       '      if(info.eq.0) then'
+       '         call dgetrs(''no transpose'',n,nrhs,a,lda,ipiv,b,ldb,info)'
+       '      end if'
+       '      return'
+       '      end'],TMPDIR+'/dgesvtst.f')
+function [X, LU, IPIV, INFO] = msolve(A,B)
+// Simplified From Mark code, solve AX = B for matrix X with DGESV from LAPACK
+  [N, NCA]     = size(A);
+  [LDB,NRHS]   = size(B);
+  LDA          = N;
+  INFO         = 0;
+  [LU, IPIV, X, INFO]  =  call ('dgesvtst',...
+				N   , 1, "i", ...
+				NRHS, 2, "i", ...
+				A   , 3, "d", ...
+				LDA , 4, "i", ...
+				B   , 6, "d", ...
+				LDB , 7, "i", ...
+				"out", ...
+				3,...
+				[N,1],5, "i", ...
+				6,...
+				[1,1],8, "i");
+endfunction
+chdir(TMPDIR);
+libn=ilib_for_link('dgesvtst','dgesvtst.o',[],'f');
+   Generate a loader file
+   Generate a Makefile
+   ilib_gen_Make: configure : Generate Makefile in SCI/modules/dynamic_link/src/scripts/
+   ilib_gen_Make: Copy compilation files (Makefile*, libtool...) to TMPDIR
+   ilib_gen_Make: Copy dgesvtst.f to TMPDIR
+   ilib_gen_Make: Modification of the Makefile in TMPDIR.
+   Running the Makefile
+exec loader.sce;
+Shared archive loaded.
+Link done.
+chdir(curdir),
+ ans  =
+ 
+  T  
+n=44;
+A=eye(n,n);B=(1:n)';
+[X, LU, IPIV, INFO] = msolve(A,B);
+if norm(A*X-B)>1d-15 then bugmes();quit;end
