@@ -11,8 +11,8 @@ if ~c_link('libintertest') then
    Generate a loader file
    Generate a Makefile: Makelib
    Running the makefile
-   compilation of addinter
-   building shared library (be patient)
+   Compilation of addinter
+   Building shared library (be patient)
   // disable message
   warning_mode = warning('query');
   warning('off');
