@@ -13,8 +13,8 @@ if ~c_link('foo') then
    Generate a loader file
    Generate a Makefile
    Running the Makefile
-   compilation of foo
-   building shared library (be patient)
+   Compilation of foo
+   Building shared library (be patient)
   // disable message
   warning_mode = warning('query');
   warning('off');
