@@ -51,10 +51,10 @@ ilib_build('foo',['scifun1','intfun1'],files,[]);
    Generate a loader file
    Generate a Makefile: Makelib
    Running the makefile
-   compilation of fun1
-   compilation of fun2
-   compilation of intfun1
-   building shared library (be patient)
+   Compilation of fun1
+   Compilation of fun2
+   Compilation of intfun1
+   Building shared library (be patient)
 // disable message
 warning_mode = warning('query');
 warning('off');
